--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mvc-proyecto1",
   "version": "1.0.0",
   "description": "",
+  "type": "module",   // para usar import/export
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
