--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "mvc-proyecto1",
   "version": "1.0.0",
-  "description": "",
-  "type": "module",   // para usar import/export
+  "description": "En este proyecto creamos desde 0 un CRM basico de clientes y sus n de telefonos.  Se desarrolla todo en Node.js,MYSQL y Angular.",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,9 +16,22 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "mysql": "^2.18.1",
-    "mysql2": "^3.14.5"
+    "mysql2": "^3.14.5",
+    "reflect-metadata": "^0.2.2",
+    "ts-node": "^10.9.2",
+    "typeorm": "^0.3.26",
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
-    "@types/node": "^24.4.0"
-  }
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.5.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/adelaescalera/CRM-clientes-telefono.git"
+  },
+  "bugs": {
+    "url": "https://github.com/adelaescalera/CRM-clientes-telefono/issues"
+  },
+  "homepage": "https://github.com/adelaescalera/CRM-clientes-telefono#readme"
 }
