--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "mvc-proyecto1",
   "version": "1.0.0",
   "description": "En este proyecto creamos desde 0 un CRM basico de clientes y sus n de telefonos.  Se desarrolla todo en Node.js,MYSQL y Angular.",
-  "type": "module",
   "main": "index.js",
   "scripts": {
+    "dev": "ts-node src/app.ts",
+    "build": "tsc",
+    "start": "node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,6 +17,7 @@
     "dotenv": "^17.2.2",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "joi": "^18.0.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.5",
     "reflect-metadata": "^0.2.2",
