--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,7 +4,7 @@
   "description": "En este proyecto creamos desde 0 un CRM basico de clientes y sus n de telefonos.  Se desarrolla todo en Node.js,MYSQL y Angular.",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node src/app.ts",
+    "dev": "nodemon --watch src --exec ts-node src/app.ts",
     "build": "tsc",
     "start": "node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
