--- a/fron2/package.json
+++ b/fron2/package.json
@@ -19,6 +19,8 @@
     "@angular/router": "^19.2.0",
     "@primeuix/themes": "^1.2.3",
     "chart.js": "^4.5.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^5.0.2",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.4",
     "rxjs": "~7.8.0",
