--- a/back-end/package.json
+++ b/back-end/package.json
@@ -22,6 +22,7 @@
     "joi": "^18.0.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.5",
+    "nodemailer": "^7.0.9",
     "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
     "typeorm": "^0.3.26",
@@ -30,7 +31,8 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/node": "^24.5.0"
+    "@types/node": "^24.5.0",
+    "@types/nodemailer": "^7.0.2"
   },
   "repository": {
     "type": "git",
