--- a/back-end/package.json
+++ b/back-end/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^2.2.0",
     "chart.js": "^4.5.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^17.2.2",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
+    "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.3",
     "@types/node": "^24.5.0",
     "@types/nodemailer": "^7.0.2"
