--- a/back-end/package.json
+++ b/back-end/package.json
@@ -21,6 +21,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "joi": "^18.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.5",
     "nodemailer": "^7.0.9",
@@ -33,6 +34,7 @@
     "@types/cors": "^2.8.19",
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.5.0",
     "@types/nodemailer": "^7.0.2"
   },
