--- a/fron2/package.json
+++ b/fron2/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.5.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^5.0.2",
+    "jwt-decode": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.4",
     "rxjs": "~7.8.0",
@@ -33,6 +34,7 @@
     "@angular/compiler-cli": "^19.2.0",
     "@types/chart.js": "^2.9.41",
     "@types/jasmine": "~5.1.0",
+    "@types/jwt-decode": "^2.2.1",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
