--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,10 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.1",
     "body-parser": "^2.2.0",
     "chart.js": "^4.5.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
+    "csv-parser": "^3.2.0",
     "dotenv": "^17.2.2",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
@@ -24,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.5",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^7.0.9",
     "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
@@ -36,6 +39,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.5.0",
+    "@types/node-schedule": "^2.1.8",
     "@types/nodemailer": "^7.0.2"
   },
   "repository": {
