--- a/fron2/package.json
+++ b/fron2/package.json
@@ -22,6 +22,7 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.4",
     "rxjs": "~7.8.0",
@@ -35,6 +36,7 @@
     "@types/chart.js": "^2.9.41",
     "@types/jasmine": "~5.1.0",
     "@types/jwt-decode": "^2.2.1",
+    "@types/leaflet": "^1.9.21",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
