--- a/back-end/package.json
+++ b/back-end/package.json
@@ -29,6 +29,7 @@
     "node-schedule": "^2.1.1",
     "nodemailer": "^7.0.9",
     "reflect-metadata": "^0.2.2",
+    "socket.io": "^4.8.1",
     "ts-node": "^10.9.2",
     "typeorm": "^0.3.26",
     "typescript": "^5.9.2"
@@ -38,9 +39,10 @@
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.5.0",
+    "@types/node": "^24.10.0",
     "@types/node-schedule": "^2.1.8",
-    "@types/nodemailer": "^7.0.2"
+    "@types/nodemailer": "^7.0.2",
+    "@types/socket.io": "^3.0.1"
   },
   "repository": {
     "type": "git",
